[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "example_package_fy"
version = "0.0.1"
authors = [
  { name="fy", email="786316743@qq.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"